# shake-factory

./: .gitignore  .gitreview  .sf.dhall  .zuul.yaml  Containerfile.dhall  README.md  Shakefile.hs  default.nix  groups  package.dhall  project.config  shake-factory.cabal  shell.nix
app/: Main.hs
playbooks/: docs.yaml  npm-rpmbuild.yaml  npm-test.yaml  prepare.yaml  shake.yaml
src/: ShakeFactory.hs
src/ShakeFactory/: Config.hs  Container.hs  Dhall.hs  Haskell.hs  Javascript.hs  OpenShift.hs  Python.hs
